# hw-test

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.gear/: hw-test.spec  rules
.github/workflows/: python-app.yml
data/: rvsets.txt  youtube.txt
data/locale/: en.json  ru.json
docs/: methodology.html
etc/: hw-test-RVSETS.txt  hw-test-VSET.txt  hw-test.conf  hw-test.conf.example
hw_test/: __init__.py  auth.py  cli.py  config.py  dialogs.py  l10n.py  state.py  system_utils.py  test_selector_gui.py  types.py
hw_test/steps/: __init__.py  base.py  step_01_hardware_detection.py  step_02_express_test.py  step_03_system_check.py  step_04_performance.py  step_05_firmware_check.py  step_06_log_collection.py  step_07_reboot.py  step_08_prepare.py  step_09_upgrade.py  step_10_config.py  step_11_install.py  step_11_syslogs.py  step_12_cpupower.py  step_13_diskperf.py  step_14_glmark.py  step_15_finalize.py
pc_test/: cli.py
pc_test/automation/: batch.py
pc_test/repo/: alt_repo.py
pc_test/sysinfo/: os_info.py
pc_test/testsuite/: registry.py
pc_test/testsuite/tests/: net.py
pc_test/utils/: cmd.py  logging.py
python/pc_test/: cli.py  collect.py  diag.py
python/pc_test/utils/: cmd.py  jsonout.py
scripts/: hw-test  pc-test  smoke.sh
src/hw_test/: __init__.py  __main__.py  bench.py  cli.py  collect.py  config.py  i18n.py  logging.py  main.py  sensors.py  smart.py
src/hw_test/automation/: batch.py
src/hw_test/repo/: alt_repo.py  sources.py
src/hw_test/sysinfo/: os_info.py
src/hw_test/system/: autorun.py  distro.py  graphics.py  hwinfo.py  journal.py  locale.py  multimedia.py  net.py  osinfo.py  packages.py  power.py  repo.py
src/hw_test/testsuite/: base.py  runner.py
src/hw_test/utils/: browser.py  files.py  shell.py  video_sets.py
tests/: __init__.py  runner.py  s05_prechecks.py  s06_repo_switch.py  s07_upgrade.py  s08_hw_collect.py  s09_express_test.py  s10_01_basic_checks.py  s10_11_final_logs.py  s11_01_user_session.py  s11_02_multimedia_keys.py  test_auth.py  test_cli.py  test_config.py  test_l10n.py  test_runner.py  test_state.py  test_steps.py  test_system_utils.py  utils.py
tools/pc-test/: CHANGELOG.md  README.md
tools/pc-test/.gear/: pc-test.spec
tools/pc-test/etc/: pc-test.conf
tools/pc-test/usr/libexec/pc-test/: common.sh  defaults.sh  internal.sh  launcher.sh  resume.sh
tools/pc-test/usr/libexec/pc-test/l10n/en/: fatal.sh
tools/pc-test/usr/libexec/pc-test/l10n/ru/: fatal.sh
tools/pc-test/usr/libexec/pc-test/steps/: collect.sh  config-form-gui.sh  config-form-tui.sh  detect.sh  express.sh  finalize.sh  install.sh  prepare.sh  upgrade.sh
tools/pc-test/var/lib/pc-test/: rvsets.txt  vkvideo.txt
usr/libexec/hw-test/: hw-test-resume.desktop  launcher.sh  resume.sh
usr/share/applications/: hw-test.desktop
